[gd_scene load_steps=15 format=3 uid="uid://cn0fi3gwlbtfa"]

[ext_resource type="TileSet" uid="uid://c3kwhxl3y6gjq" path="res://assets/scenery/sideview_tileset/desert_tileset.tres" id="1_aveni"]
[ext_resource type="Texture2D" uid="uid://cdjb8lqllqn1q" path="res://assets/scenery/backgrounds/far_mountains.png" id="2_g0ysg"]
[ext_resource type="Script" path="res://scripts/environment_scripts/enemy_encounter_1.gd" id="2_hq74r"]
[ext_resource type="Texture2D" uid="uid://dikwcct0qbp5x" path="res://assets/scenery/backgrounds/clouds.png" id="3_ynw4w"]
[ext_resource type="Texture2D" uid="uid://bdasvcsbvmpt6" path="res://assets/scenery/backgrounds/sky.png" id="4_ygww7"]
[ext_resource type="PackedScene" uid="uid://blveoq1jtp0cn" path="res://scenes/dale_scenes/dale_sideview.tscn" id="5_3ib8w"]
[ext_resource type="PackedScene" uid="uid://d107b2rqo2u24" path="res://scenes/enemy_scenes/mawling.tscn" id="6_x0a8g"]
[ext_resource type="Texture2D" uid="uid://c4c0h43moijfe" path="res://assets/ui_assets/interact_graphic.png" id="8_25ve1"]
[ext_resource type="PackedScene" uid="uid://yfdwcec282kq" path="res://scenes/ui_scenes/health_drop.tscn" id="9_bgrv3"]
[ext_resource type="PackedScene" uid="uid://bwrri7opeenaw" path="res://scenes/ui_scenes/beet.tscn" id="9_fcopu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fk662"]
radius = 42.0
height = 140.0

[sub_resource type="Animation" id="Animation_nlqtw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h7ecd"]
resource_name = "interact"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfr8r"]
_data = {
"RESET": SubResource("Animation_nlqtw"),
"interact": SubResource("Animation_h7ecd")
}

[node name="enemy_encounter_1" type="TileMap"]
tile_set = ExtResource("1_aveni")
format = 2
layer_0/tile_data = PackedInt32Array(655360, 131072, 0, 655361, 131072, 0, 655362, 131072, 0, 655363, 131072, 0, 655364, 131072, 0, 655365, 131072, 0, 655366, 131072, 0, 655367, 131072, 0, 655368, 0, 1, 655369, 65536, 1, 589833, 65536, 0, 589834, 131072, 0, 589835, 131072, 0, 589836, 131072, 0, 589837, 131072, 0, 589838, 131072, 0, 589839, 131072, 0, 589840, 131072, 0, 589841, 131072, 0, 589842, 131072, 0, 589843, 131072, 0, 589844, 0, 1, 589845, 65536, 1, 524309, 65536, 0, 524310, 131072, 0, 524311, 131072, 0, 524312, 131072, 0, 524313, 131072, 0, 524314, 131072, 0, 524315, 131072, 0, 524316, 131072, 0, 524317, 131072, 0, 524318, 131072, 0, 524319, 131072, 0, 524320, 131072, 0, 524321, 131072, 0, 524322, 131072, 0, 524323, 131072, 0, 524324, 131072, 0, 524325, 131072, 0, 524326, 131072, 0, 524327, 131072, 0, 524328, 0, 1, 458793, 65536, 0, 524329, 65536, 1, 458794, 131072, 0, 458795, 131072, 0, 458796, 131072, 0, 458797, 131072, 0, 458798, 131072, 0, 458799, 131072, 0, 458800, 196608, 0, 524336, 196608, 1, 524337, 262144, 1, 524338, 262144, 1, 524339, 262144, 1, 524340, 262144, 1, 524341, 262144, 1, 524342, 262144, 1, 524343, 262144, 1, 524344, 196608, 0, 589880, 196608, 1, 589881, 262144, 1, 589882, 262144, 1, 589883, 262144, 1, 589884, 262144, 1, 720895, 0, 0, 655359, 0, 0, 589823, 0, 0, 524287, 0, 0, 458751, 0, 0, 393215, 0, 0, 327679, 0, 0, 262143, 0, 0, 196607, 0, 0, 131071, 0, 0, 65535, 0, 0, -65537, 0, 0, -1, 0, 0, 262142, 0, 0, 327678, 0, 0, -458754, 0, 0, -393218, 0, 0, -327682, 0, 0, -262146, 0, 0, -196610, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 589885, 0, 0, 524349, 0, 0, 458813, 0, 0, 393277, 0, 0, 327741, 0, 0, 262205, 0, 0, 196669, 0, 0, 131133, 0, 0, 65597, 0, 0, 61, 0, 0, -65475, 0, 0, -196547, 0, 0, -131011, 0, 0, 720896, 131072, 1, 786432, 131072, 1, 851968, 131072, 1, 917504, 131072, 1, 720897, 131072, 1, 786433, 131072, 1, 851969, 131072, 1, 917505, 131072, 1, 720898, 131072, 1, 786434, 131072, 1, 851970, 131072, 1, 917506, 131072, 1, 720899, 131072, 1, 786435, 131072, 1, 851971, 131072, 1, 917507, 131072, 1, 720900, 131072, 1, 786436, 131072, 1, 851972, 131072, 1, 917508, 131072, 1, 720901, 131072, 1, 786437, 131072, 1, 851973, 131072, 1, 917509, 131072, 1, 720902, 131072, 1, 786438, 131072, 1, 851974, 131072, 1, 917510, 131072, 1, 720903, 131072, 1, 786439, 131072, 1, 851975, 131072, 1, 917511, 131072, 1, 720904, 131072, 1, 786440, 131072, 1, 851976, 131072, 1, 917512, 131072, 1, 720905, 131072, 1, 786441, 131072, 1, 851977, 131072, 1, 917513, 131072, 1, 720906, 131072, 1, 786442, 131072, 1, 851978, 131072, 1, 917514, 131072, 1, 720907, 131072, 1, 786443, 131072, 1, 851979, 131072, 1, 917515, 131072, 1, 720908, 131072, 1, 786444, 131072, 1, 851980, 131072, 1, 917516, 131072, 1, 720909, 131072, 1, 786445, 131072, 1, 851981, 131072, 1, 917517, 131072, 1, 720910, 131072, 1, 786446, 131072, 1, 851982, 131072, 1, 917518, 131072, 1, 720911, 131072, 1, 786447, 131072, 1, 851983, 131072, 1, 917519, 131072, 1, 720912, 131072, 1, 786448, 131072, 1, 851984, 131072, 1, 917520, 131072, 1, 720913, 131072, 1, 786449, 131072, 1, 851985, 131072, 1, 917521, 131072, 1, 720914, 131072, 1, 786450, 131072, 1, 851986, 131072, 1, 917522, 131072, 1, 720915, 131072, 1, 786451, 131072, 1, 851987, 131072, 1, 917523, 131072, 1, 720916, 131072, 1, 786452, 131072, 1, 851988, 131072, 1, 917524, 131072, 1, 720917, 131072, 1, 786453, 131072, 1, 851989, 131072, 1, 917525, 131072, 1, 720918, 131072, 1, 786454, 131072, 1, 851990, 131072, 1, 917526, 131072, 1, 720919, 131072, 1, 786455, 131072, 1, 851991, 131072, 1, 917527, 131072, 1, 720920, 131072, 1, 786456, 131072, 1, 851992, 131072, 1, 917528, 131072, 1, 720921, 131072, 1, 786457, 131072, 1, 851993, 131072, 1, 917529, 131072, 1, 720922, 131072, 1, 786458, 131072, 1, 851994, 131072, 1, 917530, 131072, 1, 720923, 131072, 1, 786459, 131072, 1, 851995, 131072, 1, 917531, 131072, 1, 720924, 131072, 1, 786460, 131072, 1, 851996, 131072, 1, 917532, 131072, 1, 720925, 131072, 1, 786461, 131072, 1, 851997, 131072, 1, 917533, 131072, 1, 720926, 131072, 1, 786462, 131072, 1, 851998, 131072, 1, 917534, 131072, 1, 720927, 131072, 1, 786463, 131072, 1, 851999, 131072, 1, 917535, 131072, 1, 720928, 131072, 1, 786464, 131072, 1, 852000, 131072, 1, 917536, 131072, 1, 720929, 131072, 1, 786465, 131072, 1, 852001, 131072, 1, 917537, 131072, 1, 720930, 131072, 1, 786466, 131072, 1, 852002, 131072, 1, 917538, 131072, 1, 720931, 131072, 1, 786467, 131072, 1, 852003, 131072, 1, 917539, 131072, 1, 720932, 131072, 1, 786468, 131072, 1, 852004, 131072, 1, 917540, 131072, 1, 720933, 131072, 1, 786469, 131072, 1, 852005, 131072, 1, 917541, 131072, 1, 720934, 131072, 1, 786470, 131072, 1, 852006, 131072, 1, 917542, 131072, 1, 720935, 131072, 1, 786471, 131072, 1, 852007, 131072, 1, 917543, 131072, 1, 720936, 131072, 1, 786472, 131072, 1, 852008, 131072, 1, 917544, 131072, 1, 720937, 131072, 1, 786473, 131072, 1, 852009, 131072, 1, 917545, 131072, 1, 720938, 131072, 1, 786474, 131072, 1, 852010, 131072, 1, 917546, 131072, 1, 720939, 131072, 1, 786475, 131072, 1, 852011, 131072, 1, 917547, 131072, 1, 720940, 131072, 1, 786476, 131072, 1, 852012, 131072, 1, 917548, 131072, 1, 720941, 131072, 1, 786477, 131072, 1, 852013, 131072, 1, 917549, 131072, 1, 720942, 131072, 1, 786478, 131072, 1, 852014, 131072, 1, 917550, 131072, 1, 720943, 131072, 1, 786479, 131072, 1, 852015, 131072, 1, 917551, 131072, 1, 720944, 131072, 1, 786480, 131072, 1, 852016, 131072, 1, 917552, 131072, 1, 720945, 131072, 1, 786481, 131072, 1, 852017, 131072, 1, 917553, 131072, 1, 720946, 131072, 1, 786482, 131072, 1, 852018, 131072, 1, 917554, 131072, 1, 720947, 131072, 1, 786483, 131072, 1, 852019, 131072, 1, 917555, 131072, 1, 720948, 131072, 1, 786484, 131072, 1, 852020, 131072, 1, 917556, 131072, 1, 720949, 131072, 1, 786485, 131072, 1, 852021, 131072, 1, 917557, 131072, 1, 720950, 131072, 1, 786486, 131072, 1, 852022, 131072, 1, 917558, 131072, 1, 720951, 131072, 1, 786487, 131072, 1, 852023, 131072, 1, 917559, 131072, 1, 720952, 131072, 1, 786488, 131072, 1, 852024, 131072, 1, 917560, 131072, 1, 720953, 131072, 1, 786489, 131072, 1, 852025, 131072, 1, 917561, 131072, 1, 720954, 131072, 1, 786490, 131072, 1, 852026, 131072, 1, 917562, 131072, 1, 720955, 131072, 1, 786491, 131072, 1, 852027, 131072, 1, 917563, 131072, 1, 720956, 131072, 1, 786492, 131072, 1, 852028, 131072, 1, 917564, 131072, 1, 655413, 131072, 1, 655414, 131072, 1, 655415, 131072, 1, 655416, 131072, 1, 655417, 131072, 1, 655418, 131072, 1, 655419, 131072, 1, 655420, 131072, 1, 589868, 131072, 1, 655404, 131072, 1, 589869, 131072, 1, 655405, 131072, 1, 589870, 131072, 1, 655406, 131072, 1, 589871, 131072, 1, 655407, 131072, 1, 589872, 131072, 1, 655408, 131072, 1, 589873, 131072, 1, 655409, 131072, 1, 589874, 131072, 1, 655410, 131072, 1, 589875, 131072, 1, 655411, 131072, 1, 589876, 131072, 1, 655412, 131072, 1, 589877, 131072, 1, 589878, 131072, 1, 589879, 131072, 1, 524330, 131072, 1, 589866, 131072, 1, 655402, 131072, 1, 524331, 131072, 1, 589867, 131072, 1, 655403, 131072, 1, 524332, 131072, 1, 524333, 131072, 1, 524334, 131072, 1, 524335, 131072, 1, 589855, 131072, 1, 655391, 131072, 1, 589856, 131072, 1, 655392, 131072, 1, 589857, 131072, 1, 655393, 131072, 1, 589858, 131072, 1, 655394, 131072, 1, 589859, 131072, 1, 655395, 131072, 1, 589860, 131072, 1, 655396, 131072, 1, 589861, 131072, 1, 655397, 131072, 1, 589862, 131072, 1, 655398, 131072, 1, 589863, 131072, 1, 655399, 131072, 1, 589864, 131072, 1, 655400, 131072, 1, 589865, 131072, 1, 655401, 131072, 1, 589846, 131072, 1, 655382, 131072, 1, 589847, 131072, 1, 655383, 131072, 1, 589848, 131072, 1, 655384, 131072, 1, 589849, 131072, 1, 655385, 131072, 1, 589850, 131072, 1, 655386, 131072, 1, 589851, 131072, 1, 655387, 131072, 1, 589852, 131072, 1, 655388, 131072, 1, 589853, 131072, 1, 655389, 131072, 1, 589854, 131072, 1, 655390, 131072, 1, 655370, 131072, 1, 655371, 131072, 1, 655372, 131072, 1, 655373, 131072, 1, 655374, 131072, 1, 655375, 131072, 1, 655376, 131072, 1, 655377, 131072, 1, 655378, 131072, 1, 655379, 131072, 1, 655380, 131072, 1, 655381, 131072, 1, 196627, 131072, 0, 196628, 131072, 0, 196629, 131072, 0, 196630, 131072, 0, 196631, 131072, 0, 196632, 131072, 0, 196633, 131072, 0, 196634, 131072, 0, 196635, 131072, 0, -131045, 131072, 0, -131044, 131072, 0, -131043, 131072, 0, -131042, 131072, 0, -131041, 131072, 0, -131040, 131072, 0, -131039, 131072, 0, -131038, 131072, 0, -131037, 131072, 0, -131036, 131072, 0, -131035, 131072, 0, -131034, 131072, 0, -131033, 131072, 0, -131032, 131072, 0, -131031, 131072, 0, -131030, 131072, 0, -131029, 131072, 0, -131028, 131072, 0, -131027, 131072, 0, -131026, 131072, 0, -131025, 131072, 0, -131024, 131072, 0, -131023, 131072, 0, -131022, 131072, 0, -131021, 131072, 0, 196654, 131072, 0, 196655, 131072, 0, 196656, 131072, 0, 196657, 131072, 0, 196658, 131072, 0, 196659, 131072, 0, 196660, 131072, 0, 196661, 131072, 0, 196662, 131072, 0, 196663, 131072, 0, -393196, 131072, 0, -393195, 131072, 0, -393194, 131072, 0, -393193, 131072, 0, -393192, 131072, 0, -393191, 131072, 0, -393190, 131072, 0, -393189, 131072, 0, -393188, 131072, 0, -393187, 131072, 0, -393186, 131072, 0, -589790, 131072, 0, -589789, 131072, 0, -589788, 131072, 0, -589787, 131072, 0, -589786, 131072, 0, -589785, 131072, 0, -589784, 131072, 0, -589783, 131072, 0, -589782, 131072, 0, -589781, 131072, 0, -589780, 131072, 0, -589779, 131072, 0, -589778, 131072, 0, -589777, 131072, 0, -589776, 131072, 0, -589775, 131072, 0, -589774, 131072, 0, -589773, 131072, 0, -589772, 131072, 0, -589771, 131072, 0, 262175, 131072, 0, 262176, 131072, 0, 262177, 131072, 0, 262178, 131072, 0, 262179, 131072, 0, 262180, 131072, 0, 16, 131072, 0, 17, 131072, 0, 18, 131072, 0, 19, 131072, 0, 20, 131072, 0, 21, 131072, 0, 53, 131072, 0, 54, 131072, 0, 55, 131072, 0, 56, 131072, 0, 57, 131072, 0, 58, 131072, 0, -327646, 131072, 0, -327645, 131072, 0, -327644, 131072, 0, -327643, 131072, 0, 458775, 262144, 2, 458776, 327680, 2, 458777, 393216, 2, 458778, 458752, 2, 458779, 524288, 2, 458785, 262144, 2, 458786, 327680, 2, 458787, 393216, 2, 458788, 458752, 2, 458789, 524288, 2, 458803, 262144, 2, 458804, 327680, 2, 458805, 393216, 2, 458806, 458752, 2, 458807, 524288, 2, 524346, 458752, 0, -262098, 327680, 0, -196562, 327680, 1, -262097, 393216, 0, -196561, 393216, 1, -458729, 524288, 0, -458724, 589824, 1, 589828, 589824, 2, 589831, 589824, 0, 524300, 589824, 2, 524307, 524288, 1, 131097, 524288, 1, -65519, 589824, 1, -65518, 589824, 0, -196578, 458752, 0, -196574, 458752, 0, -393180, 589824, 2, -65479, 589824, 2, -65482, 589824, 1, 131120, 196608, 2, 131121, 458752, 1, -655324, 262144, 2, -655323, 327680, 2, -655322, 393216, 2, -655321, 458752, 2, -655320, 524288, 2, -655313, 262144, 2, -655312, 327680, 2, -655311, 393216, 2, -655310, 458752, 2, -655309, 524288, 2, -262083, 0, 0, -327619, 0, 0, -393155, 0, 0, -458691, 0, 0, -524227, 0, 0, -589763, 0, 0, -655299, 0, 0, -720835, 0, 0, -786371, 0, 0, -851907, 0, 0, -917443, 0, 0, -982979, 0, 0, -1048515, 0, 0, -1114051, 0, 0, -1179587, 0, 0, -1245123, 0, 0, -1310659, 0, 0, 655421, 0, 0)
script = ExtResource("2_hq74r")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(800, -400)
scale = Vector2(1.16, 1.16)
transform = Transform2D(1.16, 0, 0, 1.16, 800, -400)
scroll_base_scale = Vector2(0.5, 0.5)

[node name="MountainLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
position = Vector2(235, 134)
metadata/_edit_group_ = true

[node name="MountainSprite2D" type="Sprite2D" parent="ParallaxBackground/MountainLayer"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_g0ysg")

[node name="CloudLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(229, 357)
motion_scale = Vector2(0.8, 0.8)
metadata/_edit_group_ = true

[node name="CloudSprite2D" type="Sprite2D" parent="ParallaxBackground/CloudLayer"]
z_index = -2
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_ynw4w")

[node name="SkyLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.9, 0.9)

[node name="SkySprite2D" type="Sprite2D" parent="ParallaxBackground/SkyLayer"]
z_index = -3
position = Vector2(248, 377)
texture = ExtResource("4_ygww7")
metadata/_edit_lock_ = true

[node name="health_drop" parent="." instance=ExtResource("9_bgrv3")]
position = Vector2(1639, -408)

[node name="health_drop2" parent="." instance=ExtResource("9_bgrv3")]
position = Vector2(3592, -25)

[node name="mawling" parent="." instance=ExtResource("6_x0a8g")]
position = Vector2(978, 546)

[node name="mawling2" parent="." instance=ExtResource("6_x0a8g")]
position = Vector2(2802, -624)

[node name="mawling3" parent="." instance=ExtResource("6_x0a8g")]
position = Vector2(2532, -162)

[node name="mawling4" parent="." instance=ExtResource("6_x0a8g")]
position = Vector2(2891, 422)

[node name="ExitArea2D" type="Area2D" parent="."]
position = Vector2(-3, 585)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea2D"]
shape = SubResource("CapsuleShape2D_fk662")

[node name="Sprite2D" type="Sprite2D" parent="ExitArea2D"]
visible = false
position = Vector2(46, -58)
texture = ExtResource("8_25ve1")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExitArea2D"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_rfr8r")
}

[node name="beet" parent="." instance=ExtResource("9_fcopu")]
position = Vector2(2794, -744)

[node name="dale_sideview" parent="." instance=ExtResource("5_3ib8w")]
position = Vector2(94, 603)

[connection signal="body_entered" from="ExitArea2D" to="." method="_on_exit_area_2d_body_entered"]
[connection signal="body_exited" from="ExitArea2D" to="." method="_on_exit_area_2d_body_exited"]
